--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable","WebWorker"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -18,8 +18,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* To allow using JavaScript files within TypeScript */
+    "allowJs": true,  // Allows the use of .js files in the TypeScript project
+    "checkJs": false  // Disables TypeScript error checking for .js files
   },
-  "include": ["src"],
+  "include": ["src","src/vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
